<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/love3"
        android:scaleType="centerCrop"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Jamie"
                android:textColor="@color/scoresName"
                android:textSize="@dimen/nameTextSize" />

            <TextView
                android:id="@+id/jamie_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/std_margin"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="@color/scoresName"
                android:textSize="@dimen/scoreTextSize" />

            <Button
                style="@style/top_buttons"
                android:onClick="take_julie_dinner"
                android:text="@string/dinnerJulie" />

            <Button
                style="@style/main_buttons"
                android:onClick="run_julie_bath"
                android:text="@string/bathJulie" />

            <Button
                style="@style/main_buttons"
                android:onClick="jamie_washing"
                android:text="@string/Washing" />

            <Button
                style="@style/main_buttons"
                android:onClick="jamie_kitchen"
                android:text="@string/cleanKitchen" />

            <Button
                style="@style/main_buttons"
                android:onClick="jamie_bathroom"
                android:text="@string/cleanBathroom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sm_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Julie"
                android:textColor="@color/scoresName"
                android:textSize="@dimen/nameTextSize" />

            <TextView
                android:id="@+id/julie_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/std_margin"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="@color/scoresName"
                android:textSize="@dimen/scoreTextSize" />

            <Button
                style="@style/top_buttons"
                android:onClick="take_jamie_dinner"
                android:text="@string/dinnerJamie" />

            <Button
                style="@style/main_buttons"
                android:onClick="run_jamie_bath"
                android:text="@string/bathJamie" />

            <Button
                style="@style/main_buttons"
                android:onClick="julie_washing"
                android:text="@string/Washing" />

            <Button
                style="@style/main_buttons"
                android:onClick="julie_kitchen"
                android:text="@string/cleanKitchen" />

            <Button
                style="@style/main_buttons"
                android:onClick="julie_bathroom"
                android:text="@string/cleanBathroom" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/bottom_buttons"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:onClick="reset"
        android:text="@string/startOver" />

    <Button
        style="@style/bottom_buttons"
        android:id="@+id/results_button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:onClick="end"
        android:text="@string/Results" />

    <TextView
        android:id="@+id/love_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffcfcf"
        android:layout_above="@id/results_button"
        android:layout_marginBottom="@dimen/std_margin"
        android:layout_marginLeft="@dimen/std_margin"
        android:layout_marginRight="@dimen/std_margin"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp" />

</RelativeLayout>
